# ai-design-benchmark

./: .gitignore  CHANGELOG.md  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-CODE  LICENSE-DATA  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  task_suggestion.md
.github/workflows/: test.yml
dataset/: VERSION.md
dataset/v1.0/: tasks.json
dataset/v1.0/scenes/: badge_trophy_design.md  ip_character_design.md  logo_design.md  offline_promotion_design.md  online_marketing_design.md  product_image_enhancement.md  product_poster_design.md
docs/: how-to-add-a-product.md  how-to-contribute.md  how-to-run-a-round.md
examples/: quickstart.ipynb
methodology/: evaluator-protocol.md  metrics.md  scoring-guide.md
paper/: AI-Design-Benchmark-v1.1.md
results/: README.md
results/round-1/: aggregated.csv  raw-votes.csv
results/round-1/analysis-reports/: README.md
results/round-1/failure-cases/: README.md
tests/: test_confidence.py  test_scoring.py
tools/: confidence.py  requirements.txt  scoring.py
tools/sbs-template/: README.md
